// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary when an error occurs renders an error message 1`] = `
<DocumentFragment>
  <div
    class="css-text-76zvg2"
    dir="auto"
  >
    Something went wrong: BOOM
  </div>
</DocumentFragment>
`;

exports[`ErrorBoundary when things are fine renders its children 1`] = `
<DocumentFragment>
  <div
    class="css-text-76zvg2"
    dir="auto"
  >
    OHAI
  </div>
</DocumentFragment>
`;
